# ComposeDB

./: .gitignore  Cargo.toml  README.md
example/: bare_build.rs  example_keyrange.rs  simple_build.rs
src/: bare_build.rs  blob.rs  data_interface.rs  db.rs  lib.rs  main.rs  people.rs  server.rs  state.rs
src/core/: action_log.rs  blob.rs  data_interface.rs  db.rs  mod.rs  query.rs
src/db/: jobs.rs  mod.rs  people.rs  state.rs  worker.rs
src/db_core/: blob.rs  db.rs  mod.rs  type_registry.rs
src/server/: api_structs.rs  core.rs  jobs.rs  mod.rs  routes.rs  server.rs
